--- a/app/src/main/res/layout/tab_large_objviewer_aty_objviewer.xml
+++ b/app/src/main/res/layout/tab_large_objviewer_aty_objviewer.xml
@@ -1,20 +1,35 @@
-<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tab_large_objview_aty_fl_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
     <FrameLayout
         android:id="@+id/tab_large_objview_aty_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/tab_large_objview_aty_sidebar"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#00000000"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_above="@+id/tab_large_objview_aty_hsv"></FrameLayout>
 
-</android.support.v4.widget.DrawerLayout>
+    <HorizontalScrollView
+        android:id="@+id/tab_large_objview_aty_hsv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <LinearLayout
+            android:id="@+id/tab_large_objview_aty_sidebar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="test"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+
+</RelativeLayout>
