--- a/app/src/main/res/layout/tab_large_objviewer_aty_objviewer.xml
+++ b/app/src/main/res/layout/tab_large_objviewer_aty_objviewer.xml
@@ -18,16 +18,15 @@
         android:layout_alignParentStart="true">
 
         <LinearLayout
-            android:id="@+id/tab_large_objview_aty_sidebar"
+            android:id="@+id/tab_large_objview_aty_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="test"
-                android:textColor="#FFFFFF" />
+            <ImageView
+                android:id="@+id/tab_large_objview_aty_menu_primitive_mode"
+                style="@style/ObjViewer_Menu_Image"
+                android:src="@drawable/objview_ball" />
         </LinearLayout>
     </HorizontalScrollView>
 
