--- a/app/src/main/res/layout/tab_large_objviewer_view_item_light_control.xml
+++ b/app/src/main/res/layout/tab_large_objviewer_view_item_light_control.xml
@@ -36,6 +36,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:inputType="number|numberDecimal"
+        android:padding="0dp"
         android:text="0.0" />
 
     <TextView
